python-tester/log/compile_error_map_7.txt
-MAP OPERATOR[] AT TEST-

./tmp/outfile_map_7.cpp:31:10: error: no template named 'map' in namespace 'ft'; did you mean 'Map'?
            ft::map<std::string, int> v2;
            ~~~~^~~
                Map
/Users/durante/Desktop/42-Cursus/cpp-projects/ft2/Map.hpp:9:7: note: 'Map' declared here
class Map {
      ^
./tmp/outfile_map_7.cpp:64:6: error: no template named 'map' in namespace 'ft'; did you mean 'Map'?
        ft::map<std::string, int> v2;
        ~~~~^~~
            Map
/Users/durante/Desktop/42-Cursus/cpp-projects/ft2/Map.hpp:9:7: note: 'Map' declared here
class Map {
      ^
2 errors generated.
